{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 570,
  "lineage": "645f21b4-d321-9e67-e502-7c2a41b4e239",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "tgw_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:us-east-1:421041021814:transit-gateway/tgw-06dab22ad6f6d1208",
            "association_default_route_table_id": "tgw-rtb-091c1a5cfe3aa430d",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "Inbound Transit Gateway",
            "dns_support": "enable",
            "encryption_support": "disable",
            "id": "tgw-06dab22ad6f6d1208",
            "multicast_support": "disable",
            "owner_id": "421041021814",
            "propagation_default_route_table_id": "tgw-rtb-091c1a5cfe3aa430d",
            "region": "us-east-1",
            "security_group_referencing_support": "disable",
            "tags": {
              "Name": "learn-tf-aws-vpc-tgw-inbound"
            },
            "tags_all": {
              "Name": "learn-tf-aws-vpc-tgw-inbound"
            },
            "vpn_ecmp_support": "enable"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "tgw_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:us-east-1:421041021814:transit-gateway/tgw-0b998b9aca47480fd",
            "association_default_route_table_id": "tgw-rtb-0bb9b2e9053890939",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "Outbound Transit Gateway",
            "dns_support": "enable",
            "encryption_support": "disable",
            "id": "tgw-0b998b9aca47480fd",
            "multicast_support": "disable",
            "owner_id": "421041021814",
            "propagation_default_route_table_id": "tgw-rtb-0bb9b2e9053890939",
            "region": "us-east-1",
            "security_group_referencing_support": "disable",
            "tags": {
              "Name": "learn-tf-aws-vpc-tgw-outbound"
            },
            "tags_all": {
              "Name": "learn-tf-aws-vpc-tgw-outbound"
            },
            "vpn_ecmp_support": "enable"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "tgw_inbound_rhel_to_windows",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "172.17.0.0/16",
            "id": "tgw-rtb-091c1a5cfe3aa430d_172.17.0.0/16",
            "region": "us-east-1",
            "transit_gateway_attachment_id": "tgw-attach-08130cbc885ac3ed0",
            "transit_gateway_route_table_id": "tgw-rtb-091c1a5cfe3aa430d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.tgw_inbound",
            "aws_ec2_transit_gateway_vpc_attachment.tgw_inbound_windows",
            "aws_subnet.windows_public_subnet",
            "aws_vpc.windows_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "tgw_inbound_windows_to_rhel",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "172.16.0.0/16",
            "id": "tgw-rtb-091c1a5cfe3aa430d_172.16.0.0/16",
            "region": "us-east-1",
            "transit_gateway_attachment_id": "tgw-attach-059c6608a1a399990",
            "transit_gateway_route_table_id": "tgw-rtb-091c1a5cfe3aa430d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.tgw_inbound",
            "aws_ec2_transit_gateway_vpc_attachment.tgw_inbound_rhel",
            "aws_subnet.public_subnet_01",
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "tgw_outbound_rhel_to_windows",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "172.17.0.0/16",
            "id": "tgw-rtb-0bb9b2e9053890939_172.17.0.0/16",
            "region": "us-east-1",
            "transit_gateway_attachment_id": "tgw-attach-03ea2ed35edc81d17",
            "transit_gateway_route_table_id": "tgw-rtb-0bb9b2e9053890939"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.tgw_outbound",
            "aws_ec2_transit_gateway_vpc_attachment.tgw_outbound_windows",
            "aws_subnet.windows_public_subnet",
            "aws_vpc.windows_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "tgw_outbound_windows_to_rhel",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "172.16.0.0/16",
            "id": "tgw-rtb-0bb9b2e9053890939_172.16.0.0/16",
            "region": "us-east-1",
            "transit_gateway_attachment_id": "tgw-attach-05a49f4d521a10f6c",
            "transit_gateway_route_table_id": "tgw-rtb-0bb9b2e9053890939"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.tgw_outbound",
            "aws_ec2_transit_gateway_vpc_attachment.tgw_outbound_rhel",
            "aws_subnet.public_subnet_01",
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgw_inbound_rhel",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "arn": "arn:aws:ec2:us-east-1:421041021814:transit-gateway-attachment/tgw-attach-059c6608a1a399990",
            "dns_support": "enable",
            "id": "tgw-attach-059c6608a1a399990",
            "ipv6_support": "disable",
            "region": "us-east-1",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-08d5536f9b9d684bf",
              "subnet-0950f9ad9c1667bae",
              "subnet-0a64db6889d395d31"
            ],
            "tags": {
              "Name": "learn-tf-aws-vpc-tgw-inbound-rhel-attach"
            },
            "tags_all": {
              "Name": "learn-tf-aws-vpc-tgw-inbound-rhel-attach"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-06dab22ad6f6d1208",
            "vpc_id": "vpc-05ee64f1fa11ac5fe",
            "vpc_owner_id": "421041021814"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.tgw_inbound",
            "aws_subnet.public_subnet_01",
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgw_inbound_windows",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "arn": "arn:aws:ec2:us-east-1:421041021814:transit-gateway-attachment/tgw-attach-08130cbc885ac3ed0",
            "dns_support": "enable",
            "id": "tgw-attach-08130cbc885ac3ed0",
            "ipv6_support": "disable",
            "region": "us-east-1",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-0066ad6cf2574320e",
              "subnet-02a8ffa2fe2385a02",
              "subnet-0bd44a03c41680c25"
            ],
            "tags": {
              "Name": "learn-tf-aws-vpc-tgw-inbound-windows-attach"
            },
            "tags_all": {
              "Name": "learn-tf-aws-vpc-tgw-inbound-windows-attach"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-06dab22ad6f6d1208",
            "vpc_id": "vpc-0d24b44d90f3cbd4a",
            "vpc_owner_id": "421041021814"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.tgw_inbound",
            "aws_subnet.windows_public_subnet",
            "aws_vpc.windows_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgw_outbound_rhel",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "arn": "arn:aws:ec2:us-east-1:421041021814:transit-gateway-attachment/tgw-attach-05a49f4d521a10f6c",
            "dns_support": "enable",
            "id": "tgw-attach-05a49f4d521a10f6c",
            "ipv6_support": "disable",
            "region": "us-east-1",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-08d5536f9b9d684bf",
              "subnet-0950f9ad9c1667bae",
              "subnet-0a64db6889d395d31"
            ],
            "tags": {
              "Name": "learn-tf-aws-vpc-tgw-outbound-rhel-attach"
            },
            "tags_all": {
              "Name": "learn-tf-aws-vpc-tgw-outbound-rhel-attach"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0b998b9aca47480fd",
            "vpc_id": "vpc-05ee64f1fa11ac5fe",
            "vpc_owner_id": "421041021814"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.tgw_outbound",
            "aws_subnet.public_subnet_01",
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgw_outbound_windows",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "arn": "arn:aws:ec2:us-east-1:421041021814:transit-gateway-attachment/tgw-attach-03ea2ed35edc81d17",
            "dns_support": "enable",
            "id": "tgw-attach-03ea2ed35edc81d17",
            "ipv6_support": "disable",
            "region": "us-east-1",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-0066ad6cf2574320e",
              "subnet-02a8ffa2fe2385a02",
              "subnet-0bd44a03c41680c25"
            ],
            "tags": {
              "Name": "learn-tf-aws-vpc-tgw-outbound-windows-attach"
            },
            "tags_all": {
              "Name": "learn-tf-aws-vpc-tgw-outbound-windows-attach"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0b998b9aca47480fd",
            "vpc_id": "vpc-0d24b44d90f3cbd4a",
            "vpc_owner_id": "421041021814"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.tgw_outbound",
            "aws_subnet.windows_public_subnet",
            "aws_vpc.windows_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "rhel_9_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0d8d3b1122e36c000",
            "arn": "arn:aws:ec2:us-east-1:421041021814:instance/i-03880f76f148a5cef",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "learn-tf-aws-vpc-ssm-profile",
            "id": "i-03880f76f148a5cef",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0d74906fb3b00a545"
              }
            ],
            "primary_network_interface_id": "eni-0d74906fb3b00a545",
            "private_dns": "ip-172-16-1-6.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.1.6",
            "public_dns": "ec2-75-101-227-23.compute-1.amazonaws.com",
            "public_ip": "75.101.227.23",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-099eb2e2169f3bbcd",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a64db6889d395d31",
            "tags": {
              "Name": "learn-tf-aws-vpc-rhel-9-1",
              "OS": "RHEL 9",
              "PatchGroup": "RHEL-Critical",
              "Role": "Server"
            },
            "tags_all": {
              "Name": "learn-tf-aws-vpc-rhel-9-1",
              "OS": "RHEL 9",
              "PatchGroup": "RHEL-Critical",
              "Role": "Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b680d80fe7867490"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "421041021814",
            "id": "i-03880f76f148a5cef",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_profile",
            "aws_iam_role.ssm_role",
            "aws_security_group.rhel_sg",
            "aws_subnet.public_subnet_01",
            "aws_vpc.demo_main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0d8d3b1122e36c000",
            "arn": "arn:aws:ec2:us-east-1:421041021814:instance/i-0a8629e44ef7fdf6f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "learn-tf-aws-vpc-ssm-profile",
            "id": "i-0a8629e44ef7fdf6f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-086c7b01dc9e39915"
              }
            ],
            "primary_network_interface_id": "eni-086c7b01dc9e39915",
            "private_dns": "ip-172-16-3-80.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.3.80",
            "public_dns": "ec2-54-159-14-90.compute-1.amazonaws.com",
            "public_ip": "54.159.14.90",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0874118e7f41b0a75",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0950f9ad9c1667bae",
            "tags": {
              "Name": "learn-tf-aws-vpc-rhel-9-2",
              "OS": "RHEL 9",
              "PatchGroup": "RHEL-Critical",
              "Role": "Server"
            },
            "tags_all": {
              "Name": "learn-tf-aws-vpc-rhel-9-2",
              "OS": "RHEL 9",
              "PatchGroup": "RHEL-Critical",
              "Role": "Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b680d80fe7867490"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "421041021814",
            "id": "i-0a8629e44ef7fdf6f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_profile",
            "aws_iam_role.ssm_role",
            "aws_security_group.rhel_sg",
            "aws_subnet.public_subnet_01",
            "aws_vpc.demo_main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0d8d3b1122e36c000",
            "arn": "arn:aws:ec2:us-east-1:421041021814:instance/i-0fe834fc9bb97b347",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "learn-tf-aws-vpc-ssm-profile",
            "id": "i-0fe834fc9bb97b347",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0aec8fe0756857fbb"
              }
            ],
            "primary_network_interface_id": "eni-0aec8fe0756857fbb",
            "private_dns": "ip-172-16-5-33.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.5.33",
            "public_dns": "ec2-100-48-92-213.compute-1.amazonaws.com",
            "public_ip": "100.48.92.213",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03f769b489d5b5cb5",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08d5536f9b9d684bf",
            "tags": {
              "Name": "learn-tf-aws-vpc-rhel-9-3",
              "OS": "RHEL 9",
              "PatchGroup": "RHEL-Critical",
              "Role": "Server"
            },
            "tags_all": {
              "Name": "learn-tf-aws-vpc-rhel-9-3",
              "OS": "RHEL 9",
              "PatchGroup": "RHEL-Critical",
              "Role": "Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b680d80fe7867490"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "421041021814",
            "id": "i-0fe834fc9bb97b347",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_profile",
            "aws_iam_role.ssm_role",
            "aws_security_group.rhel_sg",
            "aws_subnet.public_subnet_01",
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wsus_server_2019",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ca7038e6ff499fc0",
            "arn": "arn:aws:ec2:us-east-1:421041021814:instance/i-05992848b6b23db16",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "learn-tf-aws-vpc-ssm-profile",
            "id": "i-05992848b6b23db16",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0269130e0cd8690cd"
              }
            ],
            "primary_network_interface_id": "eni-0269130e0cd8690cd",
            "private_dns": "ip-172-17-1-244.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.17.1.244",
            "public_dns": "ec2-3-236-163-216.compute-1.amazonaws.com",
            "public_ip": "3.236.163.216",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0afab1af5bb0feddb",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02a8ffa2fe2385a02",
            "tags": {
              "Name": "learn-tf-aws-vpc-wsus-2019-1",
              "OS": "Windows Server 2019",
              "PatchGroup": "Windows-Critical",
              "Role": "WSUS"
            },
            "tags_all": {
              "Name": "learn-tf-aws-vpc-wsus-2019-1",
              "OS": "Windows Server 2019",
              "PatchGroup": "Windows-Critical",
              "Role": "WSUS"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ab9af31f69d06df2"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "421041021814",
            "id": "i-05992848b6b23db16",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_profile",
            "aws_iam_role.ssm_role",
            "aws_security_group.windows_sg",
            "aws_subnet.windows_public_subnet",
            "aws_vpc.windows_vpc",
            "data.aws_ami.windows_2019"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ca7038e6ff499fc0",
            "arn": "arn:aws:ec2:us-east-1:421041021814:instance/i-08a6db42a0cbb03ea",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "learn-tf-aws-vpc-ssm-profile",
            "id": "i-08a6db42a0cbb03ea",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-09bd20d0d2b458bbd"
              }
            ],
            "primary_network_interface_id": "eni-09bd20d0d2b458bbd",
            "private_dns": "ip-172-17-3-63.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.17.3.63",
            "public_dns": "ec2-54-172-76-223.compute-1.amazonaws.com",
            "public_ip": "54.172.76.223",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05d74c5ef5b26e50c",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bd44a03c41680c25",
            "tags": {
              "Name": "learn-tf-aws-vpc-wsus-2019-2",
              "OS": "Windows Server 2019",
              "PatchGroup": "Windows-Critical",
              "Role": "WSUS"
            },
            "tags_all": {
              "Name": "learn-tf-aws-vpc-wsus-2019-2",
              "OS": "Windows Server 2019",
              "PatchGroup": "Windows-Critical",
              "Role": "WSUS"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ab9af31f69d06df2"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "421041021814",
            "id": "i-08a6db42a0cbb03ea",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_profile",
            "aws_iam_role.ssm_role",
            "aws_security_group.windows_sg",
            "aws_subnet.windows_public_subnet",
            "aws_vpc.windows_vpc",
            "data.aws_ami.windows_2019"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ca7038e6ff499fc0",
            "arn": "arn:aws:ec2:us-east-1:421041021814:instance/i-0f741d3c6428f6be5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "learn-tf-aws-vpc-ssm-profile",
            "id": "i-0f741d3c6428f6be5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0525e19e5334bd0af"
              }
            ],
            "primary_network_interface_id": "eni-0525e19e5334bd0af",
            "private_dns": "ip-172-17-5-109.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.17.5.109",
            "public_dns": "ec2-50-19-42-226.compute-1.amazonaws.com",
            "public_ip": "50.19.42.226",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b97a85c814a542ea",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0066ad6cf2574320e",
            "tags": {
              "Name": "learn-tf-aws-vpc-wsus-2019-3",
              "OS": "Windows Server 2019",
              "PatchGroup": "Windows-Critical",
              "Role": "WSUS"
            },
            "tags_all": {
              "Name": "learn-tf-aws-vpc-wsus-2019-3",
              "OS": "Windows Server 2019",
              "PatchGroup": "Windows-Critical",
              "Role": "WSUS"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ab9af31f69d06df2"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "421041021814",
            "id": "i-0f741d3c6428f6be5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_profile",
            "aws_iam_role.ssm_role",
            "aws_security_group.windows_sg",
            "aws_subnet.windows_public_subnet",
            "aws_vpc.windows_vpc",
            "data.aws_ami.windows_2019"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421041021814:internet-gateway/igw-0d8e91f19893012d6",
            "id": "igw-0d8e91f19893012d6",
            "owner_id": "421041021814",
            "region": "us-east-1",
            "tags": {
              "Name": "learn-tf-aws-vpc-rhel-igw"
            },
            "tags_all": {
              "Name": "learn-tf-aws-vpc-rhel-igw"
            },
            "vpc_id": "vpc-05ee64f1fa11ac5fe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "windows_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421041021814:internet-gateway/igw-004c56172347a5813",
            "id": "igw-004c56172347a5813",
            "owner_id": "421041021814",
            "region": "us-east-1",
            "tags": {
              "Name": "learn-tf-aws-vpc-windows-igw"
            },
            "tags_all": {
              "Name": "learn-tf-aws-vpc-windows-igw"
            },
            "vpc_id": "vpc-0d24b44d90f3cbd4a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.windows_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "rhel_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421041021814:network-acl/acl-038fc5199d34e8399",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "id": "acl-038fc5199d34e8399",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "421041021814",
            "region": "us-east-1",
            "subnet_ids": [
              "subnet-03c0e1b460d1af533",
              "subnet-08d5536f9b9d684bf",
              "subnet-0950f9ad9c1667bae",
              "subnet-0965dca774e149fdb",
              "subnet-0a5a1cedeb1ba8646",
              "subnet-0a64db6889d395d31"
            ],
            "tags": {
              "Name": "learn-tf-aws-vpc-rhel-nacl"
            },
            "tags_all": {
              "Name": "learn-tf-aws-vpc-rhel-nacl"
            },
            "vpc_id": "vpc-05ee64f1fa11ac5fe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "windows_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421041021814:network-acl/acl-0d57bb093a586c9e5",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "id": "acl-0d57bb093a586c9e5",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "421041021814",
            "region": "us-east-1",
            "subnet_ids": [
              "subnet-0066ad6cf2574320e",
              "subnet-021be948b2fdce7ca",
              "subnet-02a8ffa2fe2385a02",
              "subnet-0a73dd370c73c6b46",
              "subnet-0ab0c8ac15e7389f3",
              "subnet-0bd44a03c41680c25"
            ],
            "tags": {
              "Name": "learn-tf-aws-vpc-windows-nacl"
            },
            "tags_all": {
              "Name": "learn-tf-aws-vpc-windows-nacl"
            },
            "vpc_id": "vpc-0d24b44d90f3cbd4a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.windows_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "rhel_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0c2236b59c18aa422",
            "network_acl_id": "acl-038fc5199d34e8399",
            "region": "us-east-1",
            "subnet_id": "subnet-0965dca774e149fdb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.rhel_nacl",
            "aws_subnet.private_subnet_01",
            "aws_vpc.demo_main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0fa13f11be5f805e3",
            "network_acl_id": "acl-038fc5199d34e8399",
            "region": "us-east-1",
            "subnet_id": "subnet-0a5a1cedeb1ba8646"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.rhel_nacl",
            "aws_subnet.private_subnet_01",
            "aws_vpc.demo_main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0f487c8a935d7f967",
            "network_acl_id": "acl-038fc5199d34e8399",
            "region": "us-east-1",
            "subnet_id": "subnet-03c0e1b460d1af533"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.rhel_nacl",
            "aws_subnet.private_subnet_01",
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "rhel_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0fba0a2027360abf0",
            "network_acl_id": "acl-038fc5199d34e8399",
            "region": "us-east-1",
            "subnet_id": "subnet-0a64db6889d395d31"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.rhel_nacl",
            "aws_subnet.public_subnet_01",
            "aws_vpc.demo_main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0ae41ffc888747daf",
            "network_acl_id": "acl-038fc5199d34e8399",
            "region": "us-east-1",
            "subnet_id": "subnet-0950f9ad9c1667bae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.rhel_nacl",
            "aws_subnet.public_subnet_01",
            "aws_vpc.demo_main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-08ccf5a83fb64701f",
            "network_acl_id": "acl-038fc5199d34e8399",
            "region": "us-east-1",
            "subnet_id": "subnet-08d5536f9b9d684bf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.rhel_nacl",
            "aws_subnet.public_subnet_01",
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "windows_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-01768f384fd674177",
            "network_acl_id": "acl-0d57bb093a586c9e5",
            "region": "us-east-1",
            "subnet_id": "subnet-0ab0c8ac15e7389f3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.windows_nacl",
            "aws_subnet.windows_private_subnet",
            "aws_vpc.windows_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0c984119662cfb398",
            "network_acl_id": "acl-0d57bb093a586c9e5",
            "region": "us-east-1",
            "subnet_id": "subnet-021be948b2fdce7ca"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.windows_nacl",
            "aws_subnet.windows_private_subnet",
            "aws_vpc.windows_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0d4bd7077f5926cbf",
            "network_acl_id": "acl-0d57bb093a586c9e5",
            "region": "us-east-1",
            "subnet_id": "subnet-0a73dd370c73c6b46"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.windows_nacl",
            "aws_subnet.windows_private_subnet",
            "aws_vpc.windows_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "windows_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-03e6abe7b350b526d",
            "network_acl_id": "acl-0d57bb093a586c9e5",
            "region": "us-east-1",
            "subnet_id": "subnet-02a8ffa2fe2385a02"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.windows_nacl",
            "aws_subnet.windows_public_subnet",
            "aws_vpc.windows_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0daac4a7542011771",
            "network_acl_id": "acl-0d57bb093a586c9e5",
            "region": "us-east-1",
            "subnet_id": "subnet-0bd44a03c41680c25"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.windows_nacl",
            "aws_subnet.windows_public_subnet",
            "aws_vpc.windows_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-09f5b021fbefab74c",
            "network_acl_id": "acl-0d57bb093a586c9e5",
            "region": "us-east-1",
            "subnet_id": "subnet-0066ad6cf2574320e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.windows_nacl",
            "aws_subnet.windows_public_subnet",
            "aws_vpc.windows_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "rhel_inbound_ephemeral",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3965614552",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-038fc5199d34e8399",
            "protocol": "6",
            "region": "us-east-1",
            "rule_action": "allow",
            "rule_number": 120,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.rhel_nacl",
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "rhel_inbound_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2348993683",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-038fc5199d34e8399",
            "protocol": "6",
            "region": "us-east-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.rhel_nacl",
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "rhel_inbound_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1368659222",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-038fc5199d34e8399",
            "protocol": "6",
            "region": "us-east-1",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.rhel_nacl",
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "rhel_outbound_ephemeral",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3606077664",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-038fc5199d34e8399",
            "protocol": "6",
            "region": "us-east-1",
            "rule_action": "allow",
            "rule_number": 120,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.rhel_nacl",
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "rhel_outbound_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-986447487",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-038fc5199d34e8399",
            "protocol": "6",
            "region": "us-east-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.rhel_nacl",
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "rhel_outbound_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2708386320",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-038fc5199d34e8399",
            "protocol": "6",
            "region": "us-east-1",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.rhel_nacl",
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "windows_inbound_ephemeral",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3132044413",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0d57bb093a586c9e5",
            "protocol": "6",
            "region": "us-east-1",
            "rule_action": "allow",
            "rule_number": 120,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.windows_nacl",
            "aws_vpc.windows_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "windows_inbound_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3673391414",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0d57bb093a586c9e5",
            "protocol": "6",
            "region": "us-east-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.windows_nacl",
            "aws_vpc.windows_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "windows_inbound_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-124082355",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0d57bb093a586c9e5",
            "protocol": "6",
            "region": "us-east-1",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.windows_nacl",
            "aws_vpc.windows_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "windows_outbound_ephemeral",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2491016917",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0d57bb093a586c9e5",
            "protocol": "6",
            "region": "us-east-1",
            "rule_action": "allow",
            "rule_number": 120,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.windows_nacl",
            "aws_vpc.windows_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "windows_outbound_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2017622090",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0d57bb093a586c9e5",
            "protocol": "6",
            "region": "us-east-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.windows_nacl",
            "aws_vpc.windows_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "windows_outbound_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3823580197",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0d57bb093a586c9e5",
            "protocol": "6",
            "region": "us-east-1",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.windows_nacl",
            "aws_vpc.windows_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421041021814:route-table/rtb-0299f37ea3fa88ac4",
            "id": "rtb-0299f37ea3fa88ac4",
            "owner_id": "421041021814",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d8e91f19893012d6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "learn-tf-aws-vpc-rhel-public-rt"
            },
            "tags_all": {
              "Name": "learn-tf-aws-vpc-rhel-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ee64f1fa11ac5fe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "421041021814",
            "id": "rtb-0299f37ea3fa88ac4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.demo_igw",
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rhel_private_tgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421041021814:route-table/rtb-05723b3b62bd521f1",
            "id": "rtb-05723b3b62bd521f1",
            "owner_id": "421041021814",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d8e91f19893012d6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.17.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-06dab22ad6f6d1208",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "learn-tf-aws-vpc-rhel-private-tgw-rt"
            },
            "tags_all": {
              "Name": "learn-tf-aws-vpc-rhel-private-tgw-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ee64f1fa11ac5fe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "421041021814",
            "id": "rtb-05723b3b62bd521f1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw_inbound",
            "aws_internet_gateway.demo_igw",
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "windows_private_tgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421041021814:route-table/rtb-0fadea0cf9676cb43",
            "id": "rtb-0fadea0cf9676cb43",
            "owner_id": "421041021814",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-004c56172347a5813",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.16.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-06dab22ad6f6d1208",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "learn-tf-aws-vpc-windows-private-tgw-rt"
            },
            "tags_all": {
              "Name": "learn-tf-aws-vpc-windows-private-tgw-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d24b44d90f3cbd4a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "421041021814",
            "id": "rtb-0fadea0cf9676cb43",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw_inbound",
            "aws_internet_gateway.windows_igw",
            "aws_vpc.windows_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "windows_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421041021814:route-table/rtb-0686ad530761951a6",
            "id": "rtb-0686ad530761951a6",
            "owner_id": "421041021814",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-004c56172347a5813",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "learn-tf-aws-vpc-windows-public-rt"
            },
            "tags_all": {
              "Name": "learn-tf-aws-vpc-windows-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d24b44d90f3cbd4a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "421041021814",
            "id": "rtb-0686ad530761951a6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.windows_igw",
            "aws_vpc.windows_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f86f73bd03e1df5",
            "region": "us-east-1",
            "route_table_id": "rtb-0299f37ea3fa88ac4",
            "subnet_id": "subnet-0a64db6889d395d31"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.demo_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_01",
            "aws_vpc.demo_main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0754edddb2de0bf5d",
            "region": "us-east-1",
            "route_table_id": "rtb-0299f37ea3fa88ac4",
            "subnet_id": "subnet-0950f9ad9c1667bae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.demo_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_01",
            "aws_vpc.demo_main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016c8a214edbb7caf",
            "region": "us-east-1",
            "route_table_id": "rtb-0299f37ea3fa88ac4",
            "subnet_id": "subnet-08d5536f9b9d684bf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.demo_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_01",
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rhel_private_tgw_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072d9c37e3e939db1",
            "region": "us-east-1",
            "route_table_id": "rtb-05723b3b62bd521f1",
            "subnet_id": "subnet-0965dca774e149fdb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.tgw_inbound",
            "aws_internet_gateway.demo_igw",
            "aws_route_table.rhel_private_tgw",
            "aws_subnet.private_subnet_01",
            "aws_vpc.demo_main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f11a90dd532334cd",
            "region": "us-east-1",
            "route_table_id": "rtb-05723b3b62bd521f1",
            "subnet_id": "subnet-0a5a1cedeb1ba8646"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.tgw_inbound",
            "aws_internet_gateway.demo_igw",
            "aws_route_table.rhel_private_tgw",
            "aws_subnet.private_subnet_01",
            "aws_vpc.demo_main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087ce92eb9350bf2e",
            "region": "us-east-1",
            "route_table_id": "rtb-05723b3b62bd521f1",
            "subnet_id": "subnet-03c0e1b460d1af533"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.tgw_inbound",
            "aws_internet_gateway.demo_igw",
            "aws_route_table.rhel_private_tgw",
            "aws_subnet.private_subnet_01",
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "windows_private_tgw_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0326d1e5712f12ea5",
            "region": "us-east-1",
            "route_table_id": "rtb-0fadea0cf9676cb43",
            "subnet_id": "subnet-0ab0c8ac15e7389f3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.tgw_inbound",
            "aws_internet_gateway.windows_igw",
            "aws_route_table.windows_private_tgw",
            "aws_subnet.windows_private_subnet",
            "aws_vpc.windows_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c63fdb63a74f17b",
            "region": "us-east-1",
            "route_table_id": "rtb-0fadea0cf9676cb43",
            "subnet_id": "subnet-021be948b2fdce7ca"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.tgw_inbound",
            "aws_internet_gateway.windows_igw",
            "aws_route_table.windows_private_tgw",
            "aws_subnet.windows_private_subnet",
            "aws_vpc.windows_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-074b6ad20783f433c",
            "region": "us-east-1",
            "route_table_id": "rtb-0fadea0cf9676cb43",
            "subnet_id": "subnet-0a73dd370c73c6b46"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.tgw_inbound",
            "aws_internet_gateway.windows_igw",
            "aws_route_table.windows_private_tgw",
            "aws_subnet.windows_private_subnet",
            "aws_vpc.windows_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "windows_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c517fe93f27ce83",
            "region": "us-east-1",
            "route_table_id": "rtb-0686ad530761951a6",
            "subnet_id": "subnet-02a8ffa2fe2385a02"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.windows_igw",
            "aws_route_table.windows_public_rt",
            "aws_subnet.windows_public_subnet",
            "aws_vpc.windows_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba34ee1b22fa474b",
            "region": "us-east-1",
            "route_table_id": "rtb-0686ad530761951a6",
            "subnet_id": "subnet-0bd44a03c41680c25"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.windows_igw",
            "aws_route_table.windows_public_rt",
            "aws_subnet.windows_public_subnet",
            "aws_vpc.windows_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004e22e99049b3758",
            "region": "us-east-1",
            "route_table_id": "rtb-0686ad530761951a6",
            "subnet_id": "subnet-0066ad6cf2574320e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.windows_igw",
            "aws_route_table.windows_public_rt",
            "aws_subnet.windows_public_subnet",
            "aws_vpc.windows_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rhel_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421041021814:security-group/sg-0b680d80fe7867490",
            "description": "Security group for RHEL EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b680d80fe7867490",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "rhel-instances-sg",
            "name_prefix": "",
            "owner_id": "421041021814",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "learn-tf-aws-vpc-rhel-sg"
            },
            "tags_all": {
              "Name": "learn-tf-aws-vpc-rhel-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ee64f1fa11ac5fe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "421041021814",
            "id": "sg-0b680d80fe7867490",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "windows_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421041021814:security-group/sg-0ab9af31f69d06df2",
            "description": "Security group for Windows EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ab9af31f69d06df2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "172.16.0.0/16"
                ],
                "description": "",
                "from_port": 8530,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8531
              }
            ],
            "name": "windows-instances-sg",
            "name_prefix": "",
            "owner_id": "421041021814",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "learn-tf-aws-vpc-windows-sg"
            },
            "tags_all": {
              "Name": "learn-tf-aws-vpc-windows-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d24b44d90f3cbd4a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "421041021814",
            "id": "sg-0ab9af31f69d06df2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.windows_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421041021814:subnet/subnet-0965dca774e149fdb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0965dca774e149fdb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "421041021814",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "learn-tf-aws-vpc-rhel-pv-sub-01"
            },
            "tags_all": {
              "Name": "learn-tf-aws-vpc-rhel-pv-sub-01"
            },
            "vpc_id": "vpc-05ee64f1fa11ac5fe"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "421041021814",
            "id": "subnet-0965dca774e149fdb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.demo_main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421041021814:subnet/subnet-0a5a1cedeb1ba8646",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a5a1cedeb1ba8646",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "421041021814",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "learn-tf-aws-vpc-rhel-pv-sub-01"
            },
            "tags_all": {
              "Name": "learn-tf-aws-vpc-rhel-pv-sub-01"
            },
            "vpc_id": "vpc-05ee64f1fa11ac5fe"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "421041021814",
            "id": "subnet-0a5a1cedeb1ba8646",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.demo_main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421041021814:subnet/subnet-03c0e1b460d1af533",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.16.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c0e1b460d1af533",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "421041021814",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "learn-tf-aws-vpc-rhel-pv-sub-01"
            },
            "tags_all": {
              "Name": "learn-tf-aws-vpc-rhel-pv-sub-01"
            },
            "vpc_id": "vpc-05ee64f1fa11ac5fe"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "421041021814",
            "id": "subnet-03c0e1b460d1af533",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421041021814:subnet/subnet-0a64db6889d395d31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a64db6889d395d31",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "421041021814",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "learn-tf-aws-vpc-rhel-pb-sub-01"
            },
            "tags_all": {
              "Name": "learn-tf-aws-vpc-rhel-pb-sub-01"
            },
            "vpc_id": "vpc-05ee64f1fa11ac5fe"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "421041021814",
            "id": "subnet-0a64db6889d395d31",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.demo_main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421041021814:subnet/subnet-0950f9ad9c1667bae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0950f9ad9c1667bae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "421041021814",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "learn-tf-aws-vpc-rhel-pb-sub-01"
            },
            "tags_all": {
              "Name": "learn-tf-aws-vpc-rhel-pb-sub-01"
            },
            "vpc_id": "vpc-05ee64f1fa11ac5fe"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "421041021814",
            "id": "subnet-0950f9ad9c1667bae",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.demo_main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421041021814:subnet/subnet-08d5536f9b9d684bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.16.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d5536f9b9d684bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "421041021814",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "learn-tf-aws-vpc-rhel-pb-sub-01"
            },
            "tags_all": {
              "Name": "learn-tf-aws-vpc-rhel-pb-sub-01"
            },
            "vpc_id": "vpc-05ee64f1fa11ac5fe"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "421041021814",
            "id": "subnet-08d5536f9b9d684bf",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "windows_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421041021814:subnet/subnet-0ab0c8ac15e7389f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.17.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab0c8ac15e7389f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "421041021814",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "learn-tf-aws-vpc-windows-pv-sub-01"
            },
            "tags_all": {
              "Name": "learn-tf-aws-vpc-windows-pv-sub-01"
            },
            "vpc_id": "vpc-0d24b44d90f3cbd4a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "421041021814",
            "id": "subnet-0ab0c8ac15e7389f3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.windows_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421041021814:subnet/subnet-021be948b2fdce7ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.17.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-021be948b2fdce7ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "421041021814",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "learn-tf-aws-vpc-windows-pv-sub-01"
            },
            "tags_all": {
              "Name": "learn-tf-aws-vpc-windows-pv-sub-01"
            },
            "vpc_id": "vpc-0d24b44d90f3cbd4a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "421041021814",
            "id": "subnet-021be948b2fdce7ca",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.windows_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421041021814:subnet/subnet-0a73dd370c73c6b46",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.17.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a73dd370c73c6b46",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "421041021814",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "learn-tf-aws-vpc-windows-pv-sub-01"
            },
            "tags_all": {
              "Name": "learn-tf-aws-vpc-windows-pv-sub-01"
            },
            "vpc_id": "vpc-0d24b44d90f3cbd4a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "421041021814",
            "id": "subnet-0a73dd370c73c6b46",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.windows_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "windows_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421041021814:subnet/subnet-02a8ffa2fe2385a02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.17.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a8ffa2fe2385a02",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "421041021814",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "learn-tf-aws-vpc-windows-pb-sub-01"
            },
            "tags_all": {
              "Name": "learn-tf-aws-vpc-windows-pb-sub-01"
            },
            "vpc_id": "vpc-0d24b44d90f3cbd4a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "421041021814",
            "id": "subnet-02a8ffa2fe2385a02",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.windows_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421041021814:subnet/subnet-0bd44a03c41680c25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.17.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd44a03c41680c25",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "421041021814",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "learn-tf-aws-vpc-windows-pb-sub-01"
            },
            "tags_all": {
              "Name": "learn-tf-aws-vpc-windows-pb-sub-01"
            },
            "vpc_id": "vpc-0d24b44d90f3cbd4a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "421041021814",
            "id": "subnet-0bd44a03c41680c25",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.windows_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421041021814:subnet/subnet-0066ad6cf2574320e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.17.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0066ad6cf2574320e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "421041021814",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "learn-tf-aws-vpc-windows-pb-sub-01"
            },
            "tags_all": {
              "Name": "learn-tf-aws-vpc-windows-pb-sub-01"
            },
            "vpc_id": "vpc-0d24b44d90f3cbd4a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "421041021814",
            "id": "subnet-0066ad6cf2574320e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.windows_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo_main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421041021814:vpc/vpc-05ee64f1fa11ac5fe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-04b5a781726c93412",
            "default_route_table_id": "rtb-0c5a70da8d2450f41",
            "default_security_group_id": "sg-055f230f5d3d8c3e2",
            "dhcp_options_id": "dopt-0a4ef7ea8055a7aac",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05ee64f1fa11ac5fe",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c5a70da8d2450f41",
            "owner_id": "421041021814",
            "region": "us-east-1",
            "tags": {
              "Name": "learn-tf-aws-vpc-rhel-vpc"
            },
            "tags_all": {
              "Name": "learn-tf-aws-vpc-rhel-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "421041021814",
            "id": "vpc-05ee64f1fa11ac5fe",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "windows_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421041021814:vpc/vpc-0d24b44d90f3cbd4a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.0.0/16",
            "default_network_acl_id": "acl-0ae022726f282757a",
            "default_route_table_id": "rtb-0f9220bf8c6549e19",
            "default_security_group_id": "sg-0bb6fc9360bffb387",
            "dhcp_options_id": "dopt-0a4ef7ea8055a7aac",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d24b44d90f3cbd4a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f9220bf8c6549e19",
            "owner_id": "421041021814",
            "region": "us-east-1",
            "tags": {
              "Name": "learn-tf-aws-vpc-windows-vpc"
            },
            "tags_all": {
              "Name": "learn-tf-aws-vpc-windows-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "421041021814",
            "id": "vpc-0d24b44d90f3cbd4a",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}